# infrastructure/entry-points/reactive-web/src/main/java/co/com/crediauth/api/UserRouterRest.java
@@ -1,5 +1,6 @@
 package co.com.crediauth.api;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.http.MediaType;
@@ -14,17 +15,26 @@ public class UserRouterRest {
 
     private final UserHandler userHandler;
 
+    @Value("${api.base-path:api}")
+    private String apiBasePath;
+
+    @Value("${api.version:1}")
+    private String apiVersion;
+
+    @Value("${api.endpoints.users:usuarios}")
+    private String apiEndpointUsers;
+
     public UserRouterRest(UserHandler userHandler) {
         this.userHandler = userHandler;
     }
 
     @Bean
     public RouterFunction<ServerResponse> userRoutes() {
+        String basePath = "/" + apiBasePath + "/v" + apiVersion + "/" + apiEndpointUsers;
+        
         return route()
-                .POST("/users", userHandler::createUser)
-
-
-                .GET("/users/{documentNumber}", userHandler::existUserByDocumentNumber)
+                .POST(basePath, userHandler::createUser)
+                .GET(basePath + "/{documentNumber}", userHandler::existUserByDocumentNumber)
 
                 .GET("/openapi/openapi.yaml", request ->
                         ServerResponse.ok()
