# infrastructure/entry-points/reactive-web/src/main/java/co/com/crediauth/api/requestdto/DocumentRequestDto.java
@@ -1,0 +1,13 @@
+package co.com.crediauth.api.requestdto;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Size;
+
+public record DocumentRequestDto(
+
+        Long idTypeDocument,
+        String documentNumber,
+        String email
+) {
+}
