# infrastructure/entry-points/reactive-web/src/main/java/co/com/crediauth/api/requestdto/documentExistRequestDto.java
@@ -1,27 +1,0 @@
-package co.com.crediauth.api.requestdto;
-
-import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Size;
-
-public record documentExistRequestDto(
-
-        Long idTypeDocument,
-        String documentNumber,
-
-
-        String email
-) {
-    public static record RolUpdateRequestDto(
-            @NotNull(message = "El ID del rol es requerido")
-            Long idRol,
-
-            @NotBlank(message = "El nombre del rol no puede estar vacío")
-            @Size(min = 2, max = 50, message = "El nombre del rol debe tener entre 2 y 50 caracteres")
-            String name,
-
-            @Size(max = 200, message = "La descripción no puede exceder 200 caracteres")
-            String description
-    ) {
-    }
-}
